# PaperMind

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  translation_requirements.md
backend/: app.py  database.py  mineru_service.py  translation_service.py
frontend/: app.js  index.html  styles.css
