[project]
name = "mineru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "dill>=0.3.8,<1",
    "doclayout-yolo>=0.0.4",
    "ftfy>=6.3.1,<7",
    "magic-pdf==1.3.12",
    "matplotlib>=3.10,<4",
    "omegaconf>=2.3,<3",
    "openai>=1.70,<3",
    "opencv-python-headless>=4.10",
    "pyclipper>=1.3,<2",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.32",
    "rapid-table>=1,<4",
    "shapely>=2,<3",
    "ultralytics>=8.3,<9",
    "uvicorn>=0.51.0",
]
